# JobLake

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
configs/: sources.yaml
docker/: Dockerfile.spark
docs/: runbook.md
src/agent/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/agent/src/: config.py  lifecycle.py  logging.py  main.py  routes.py
src/agent/src/agent/: agent.py  prompts.py  routes.py  schema.py  tools.py  trino_client.py
src/agent/src/exceptions/: handlers.py  responses.py
src/app/: Dockerfile  README.md  pyproject.toml
src/app/src/: config.py  logging.py  main.py
src/app/src/services/: agent_client.py  queries.py  trino_client.py
src/app/src/ui/: chat.py  dashboard.py  layout.py
src/collector/: README.md  pyproject.toml
src/collector/src/: config.py  habr_career_parser.py  logging.py  main.py  pipeline.py  publisher.py  schema.py
src/dags/: daily_joblake_pipeline.py
src/spark-apps/: bronze_to_silver.py  kafka_to_bronze.py
src/spark-apps/common/: spark_session.py
src/spark-apps/jobs/: bronze_to_silver.py  kafka_to_bronze.py  silver_to_gold.py
trino/catalog/: joblake.properties
