[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiotrino>=0.3.0",
    "fastapi>=0.136.1",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.1",
    "scalar-fastapi>=1.8.2",
    "structlog>=25.5.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
