[project]
name = "collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faststream[kafka]>=0.6.7",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
